force-app/main/default/objects/ShipEngine_Webhook__mdt/ShipEngine_Webhook__mdt.object-meta.xml
<CustomObject>
    <description>This Object Stores the different webhooks that are currently active withing ShipEngine</description>
    <label>ShipEngine Webhook</label>
    <pluralLabel>ShipEngine Webhooks</pluralLabel>
</CustomObject>