force-app/main/default/objects/ShipEngine_Webhook__mdt/fields/Webhook_Active__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the webhook is active or not.</description>
    <label>Webhook Active</label>
    <type>Checkbox</type>
</CustomField>