force-app/main/default/objects/ShipEngine_Webhook__mdt/fields/Webhook_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Event_Type__c</fullName>
    <description>The type(s) of events tracked.</description>
    <label>Webhook Event Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>