force-app/main/default/objects/ShipEngine_Webhook__mdt/fields/Webhook_Id__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The returned id of the webhook that was created</description>
    <label>Webhook Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>