force-app/main/default/objects/ShipEngine_Webhook__mdt/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <description>The URL that will be listening for any events that come through.</description>
    <label>Webhook URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>